ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2/input.ts:1:10
  |
1 | function (a => b;
  |          ^

